# Torito-25-26

./: .gitignore  GSCtoRelay  LoRaModule.cpp  LoRaModule.h  LoRa_range_test_receiver.ino  LoRa_receiver.ino  LoRa_timing.cpp  README.md  TODO.md  TS_ESP.ino  a.out  gsc_main.py  gsc_main.py.save  i2c_test.py  lora_config.h  lora_range_test_sender.ino  lora_sender.ino  second_spi.py  spi_testing.py  test.cpp  ts_i2c_esp.ino  ts_i2c_teensy.ino
GSC_to_Relay_Code/: README.md  SenderMCU_to_LoRa1.cpp  main_tx.cpp
INO/: LoRA_timing.ino
LoRA_timing/: LoRA_timing.ino
LoRa_Library/: LoRaModule.cpp  README.md  lora_config.h
Torito GSC Code SMD Ethan/: LoRA_timing.ino  LoRa_timing.py  gscPlots.py  jetson_lora_script.py
UV Project/: LoRa_timing.py  LoRa_timing_beta.py  LoRa_timing_v2.py  main.py  (+10 more)
archive/: README.md  gsc_dashboard.py  gsc_main-save.py  gsc_main-save2.py  gsc_main-save3.py  gsc_main-windows.py  gsc_main-windows3.py  gsc_main.py  lora_class.py  lora_sender.ino  lora_timing.py  main_windows.py  main_windows_test.py  pyproject.toml  telemetry_1772296128.csv
archive/ESPLoRaModule/: LoRaModule.cpp  LoRaModule.h  lora_config.h
archive/GSC_to_Relay_Code/: README.md  main_rx.cpp  main_tx.cpp
archive/LoRa_Library/: LoRaModule.cpp  LoRaModule.h  README.md  library.json  lora_config.h
archive/pio/: GSC_ESP-save2.ino  GSC_ESP.ino
archive/sam_stuff/: button_test.py  gsc_main-windows3.py  message_decoder.py
archive/uv/: converter_decoder_v3.py  converter_decoder_v4.py  converter_decoder_v5.py  gscPlots.py  lora_receiver.ino  main_windows_v3.py  plottingShit.py
(+78 files in other folders)
